issue/NEX-6 Multi Xero Implement with Xero Connections
