# routes/api.php
@@ -30,3 +30,5 @@ Route::middleware('connector.auth')->group(function () {
 
 Route::get('/integrations/xero/connect', [XeroController::class, 'connect']);
 Route::get('/integrations/xero/callback', [XeroController::class, 'callback']);
+
+Route::get('/integrations/xero/{connectionId}/contacts', [XeroController::class, 'getContacts']);
